# Integrated_3PCF_theory

./: .gitignore  CMakeLists.txt  README.md
data/angular_bins/: alpha_angles_arcmins_4_130_10_bins.tab  alpha_angles_arcmins_4_250_13_bins.tab  alpha_angles_arcmins_4_250_20_bins.tab  alpha_angles_arcmins_5_250_15_bins.tab  alpha_max_angles_arcmins_4_130_10_bins.tab  alpha_max_angles_arcmins_4_250_13_bins.tab  alpha_max_angles_arcmins_4_250_20_bins.tab  alpha_max_angles_arcmins_5_250_15_bins.tab  alpha_min_angles_arcmins_4_130_10_bins.tab  alpha_min_angles_arcmins_4_250_13_bins.tab  alpha_min_angles_arcmins_4_250_20_bins.tab  alpha_min_angles_arcmins_5_250_15_bins.tab
data/ell_arrays/: ell_array_150_disjoint.tab  ell_array_157.tab  ell_array_50.tab  ell_array_60.tab  ell_array_80.tab
data/nofz/: pofz_projected_density_Buzzard_Y3_map_a_0.2_0.5.tab  pofz_projected_density_maps.tab
include/: ClassEngine.hh  Engine.hh  VEGAS_Integrator.h  bihalofit.hpp  bispectra_2D.h  bispectrum.hpp  constants.h  cosmology_utils.h  halo_utils.hpp  integrated_bispectra_2D.h  integration_utils.h  interpolation_methods.h  mlinterp.hpp  power_spectra_2D.h  power_spectrum.hpp  real_space_2D.h
src/: CMakeLists.txt  ClassEngine.cc  VEGAS_Integrator.cpp  bihalofit.cpp  bispectra_2D.cpp  bispectrum.cpp  cosmology_utils.cpp  halo_utils.cpp  integrated_bispectra_2D.cpp  integration_utils.cpp  interpolation_methods.cpp  main.cpp  power_spectra_2D.cpp  power_spectrum.cpp  real_space_2D.cpp
